syntax = "proto3";

package diffusion;

service DiffusionService {
  rpc GenerateImage(GenerateImageRequest) returns (GenerateImageResponse);
  rpc GetJobStatus(JobStatusRequest) returns (JobStatusResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message GenerateImageRequest {
  string prompt = 1;
  string negative_prompt = 2;
  int32 num_inference_steps = 3;
  double guidance_scale = 4;
  int32 width = 5;
  int32 height = 6;
  optional int64 seed = 7;
  string model_id = 8;
  int32 num_images = 9;
}

message GenerateImageResponse {
  string job_id = 1;
  repeated bytes images = 2;
  string status = 3;
  GenerationMetadata metadata = 4;
}

message GenerationMetadata {
  double generation_time_seconds = 1;
  string model_used = 2;
  int64 seed = 3;
  int32 actual_steps = 4;
}

message JobStatusRequest {
  string job_id = 1;
}

message JobStatusResponse {
  string job_id = 1;
  string status = 2;
  optional GenerateImageResponse result = 3;
  optional string error = 4;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  bool model_loaded = 2;
  int32 queue_length = 3;
  int32 active_workers = 4;
  map<string, string> system_info = 5;
}
